[package]
name = "reallystart"
version = "0.1.0"
edition = "2021"

[dependencies]

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
embed-resource = { version = "3.0" }
